--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 
 <html>
 <head>
-    <link rel="stylesheet" href="/css/reset.css" type="text/css">
-    <link rel="stylesheet" href="/css/index.css" type="text/css">
+    <link rel="stylesheet" href="/styles/reset.css" type="text/css">
+    <link rel="stylesheet" href="/styles/index.css" type="text/css">
 
     <meta http-equiv="content-type" content="text/html;charset=utf-8"/>
     <meta charset="UTF-8"/>
@@ -52,7 +52,7 @@
 </body>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-<script type="text/javascript" src="/js/library.js"></script>
+<script type="text/javascript" src="/scripts/library.js"></script>
 
 </html>
 
