--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 
 <html>
 <head>
-    <link rel="stylesheet" href="styles/reset.css" type="text/css">
-    <link rel="stylesheet" href="styles/index.scss" type="text/css">
+    <link rel="stylesheet" href="client/styles/reset.css" type="text/css">
+    <link rel="stylesheet" href="client/styles/index.scss" type="text/css">
 
     <meta http-equiv="content-type" content="text/html;charset=utf-8"/>
     <meta charset="UTF-8"/>
@@ -21,13 +21,13 @@
     <meta itemprop="url" content="http://kash.cm/">
     <meta itemprop="name" content="Kash Goudarzi">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <link rel="stylesheet" href="styles/index.css">
+    <link rel="stylesheet" href="/client/styles/index.css">
     <title>Kash Goudarzi</title>
 </head>
 
 <body>
 <div id="app">
-    <button class="night-mode"><img src="images/moon.svg" alt=""></button>
+    <button class="night-mode"><img src="client/images/moon.svg" alt=""></button>
     <div class="top-display">
         <div>
             <h1>Hey. I'm Kash Goudarzi.</h1>
@@ -46,7 +46,7 @@
             <div class="experiences">
                 <div class="experience">
                     <div class="experience-logo">
-                        <img src="images/wesaturate-logo.png" alt="Wesaturate Logo">
+                        <img src="client/images/wesaturate-logo.png" alt="Wesaturate Logo">
                     </div>
                     <div class="experience-text">
                         <div class="title-info">
@@ -68,7 +68,7 @@
                 </div>
                 <div class="experience">
                     <div class="experience-logo">
-                        <img src="images/haiku-logo.png" alt="Haiku Deck Logo">
+                        <img src="client/images/haiku-logo.png" alt="Haiku Deck Logo">
                     </div>
                     <div class="experience-text">
                         <div class="title-info">
@@ -98,7 +98,7 @@
                 </div>
                 <div class="experience">
                     <div class="experience-logo">
-                        <img src="images/apple-logo.png" alt="Apple Logo">
+                        <img src="client/images/apple-logo.png" alt="Apple Logo">
                     </div>
                     <div class="experience-text">
                         <div class="title-info">
@@ -134,7 +134,7 @@
                 </div>
                 <div class="experience">
                     <div class="experience-logo">
-                        <img src="images/ymca-logo.png" alt="YMCA Logo">
+                        <img src="client/images/ymca-logo.png" alt="YMCA Logo">
                     </div>
                     <div class="experience-text">
                         <div class="title-info">
@@ -183,7 +183,6 @@
                     <span class="header-num">1</span> Skills
                 </h1>
             </div>
-            <p>Lorem</p>
             <div class="skills-row">
                 <div class="skill">
                     <div class="header header-3">
@@ -194,7 +193,7 @@
                     </div>
                     <div class="skill-list">
                         HTML, CSS, JavaScript, Bootstrap, Sass, Less, jQuery, ES6, React,
-                        Redux, Jest, ChartJS
+                        Redux, Mocha, Enzyme, ChartJS
                     </div>
                 </div>
                 <div class="skill">
@@ -246,7 +245,7 @@
             <div class="experiences">
                 <div class="experience">
                     <div class="experience-logo">
-                        <img src="images/uw-logo.png" alt="YMCA Logo">
+                        <img src="client/images/uw-logo.png" alt="YMCA Logo">
                     </div>
                     <div class="experience-text">
                         <div class="title-info">
@@ -261,7 +260,7 @@
                 </div>
                 <div class="experience">
                     <div class="experience-logo">
-                        <img src="images/edmonds-logo.png" alt="YMCA Logo">
+                        <img src="client/images/edmonds-logo.png" alt="YMCA Logo">
                     </div>
                     <div class="experience-text">
                         <div class="title-info">
@@ -287,7 +286,7 @@
             </div>
             <div class="photography">
                 <div class="photo-img-container">
-                    <img src="images/photo-0.jpg" alt="">
+                    <img src="client/images/photo-0.jpg" alt="">
                 </div>
                 <div class="photography-button-container">
                     <button class="photography-selected">
@@ -310,8 +309,6 @@
                     <span class="header-num">1</span> What I'm Up To
                 </h1>
             </div>
-            <p>These are just a few things that I'm up to. This includes the book that I'm
-                currently reading, my newest blog post, and some other things.</p>
             <div class="upto">
                 <div class="upto-row">
                     <div class="upto-book">
@@ -383,20 +380,20 @@
                     <a href="mailto:me@kash.cm">me@kash.cm</a></p>
                 <p>You can find me on different social media platforms here:</p>
                 <div class="social">
-                    <a target="_blank" href="https://wesaturate.com/kash"><img src="images/wesaturate-logo.png" alt="Wesaturate Logo"></a>
-                    <a target="_blank" href="https://instagram.com/kashgoudarzi"><img src="images/contact-instagram.svg" alt="Instagram Logo"></a>
-                    <a target="_blank" href="https://linkedin.com/in/kashg"><img src="images/contact-linkedin.svg" alt="Linkedin Logo"></a>
-                    <a target="_blank" href="https://twitter.com/kashgoudarzi"><img src="images/contact-twitter.svg" alt="Twitter Logo"></a>
-                    <a target="_blank" href="https://medium.com/@kashgoudarzi"><img src="images/contact-medium.svg" alt="Medium Logo"></a>
-                    <a target="_blank" href="https://github.com/kash"><img src="images/contact-github.svg" alt="Github Logo"></a>
-                    <a target="_blank" href="https://unsplash.com/kash"><img src="images/contact-unsplash.png" alt="Unsplash Logo"></a>
+                    <a title="Wesaturate" target="_blank" href="https://wesaturate.com/kash"><img src="client/images/wesaturate-logo.png" alt="Wesaturate Logo"></a>
+                    <a title="Instagram" target="_blank" href="https://instagram.com/kashgoudarzi"><img src="client/images/contact-instagram.svg" alt="Instagram Logo"></a>
+                    <a title="LinkedIn" target="_blank" href="https://linkedin.com/in/kashg"><img src="client/images/contact-linkedin.svg" alt="Linkedin Logo"></a>
+                    <a title="Twitter" target="_blank" href="https://twitter.com/kashgoudarzi"><img src="client/images/contact-twitter.svg" alt="Twitter Logo"></a>
+                    <a title="Medium" target="_blank" href="https://medium.com/@kashgoudarzi"><img src="client/images/contact-medium.svg" alt="Medium Logo"></a>
+                    <a title="GitHub" target="_blank" href="https://github.com/kash"><img src="client/images/contact-github.svg" alt="Github Logo"></a>
+                    <a title="Unsplash" target="_blank" href="https://unsplash.com/kash"><img src="client/images/contact-unsplash.png" alt="Unsplash Logo"></a>
                 </div>
             </div>
         </div>
     </main>
 </div>
 </body>
-<script type="text/javascript" src="scripts/index.js"></script>
+<script type="text/javascript" src="/client/scripts/index.js"></script>
 
 </html>
 
