--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <span class="header-num">1</span> Experience
                 </h1>
             </div>
-            <p>When I'm not working, I like to haha jk im always working</p>
+            <!--<p>When I'm not working, I like to haha jk im always working</p>-->
             <div class="experiences">
                 <div class="experience">
                     <div class="experience-logo">
@@ -355,7 +355,7 @@
                         <div class="header header-3">
                             <h3>
                                 <span class="header-h">H</span>
-                                <span class="header-num">3</span> Organization I'm Like
+                                <span class="header-num">3</span> Organization I Like
                             </h3>
                         </div>
                         <a class="org">
