upated url for bear app image

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                             </h3>
                         </div>
                         <a class="app">
-                            <img src="https://goo.gl/5ZxNN3" alt="Cool App">
+                            <img src="https://pbs.twimg.com/profile_images/748254412259328000/WqDZWu-w.jpg" alt="Cool App">
                             <p>This is a really cool app</p>
                         </a>
                     </div>
