moves images from apple directory to client

--- a/apple/index.html
+++ b/apple/index.html
@@ -32,37 +32,37 @@
             thin and listening to me while I talk about how cool coding is.</p>
         <h3>Thank you, Raid, for sending me some of these photos</h3>
     </div>
-    <img src="images/1.jpg">
-    <img src="images/2.jpg">
-    <img src="images/3.jpg">
-    <img src="images/4.jpg">
-    <img src="images/5.jpg">
-    <img src="images/6.jpg">
-    <img src="images/7.jpg">
-    <img src="images/8.jpg">
-    <img src="images/9.jpg">
-    <img src="images/10.jpg">
-    <img src="images/11.jpg">
-    <img src="images/12.jpg">
-    <img src="images/13.jpg">
-    <img src="images/14.jpg">
-    <img src="images/15.jpg">
-    <img src="images/16.jpg">
-    <img src="images/17.jpg">
-    <img src="images/18.jpg">
-    <img src="images/19.jpg">
-    <img src="images/20.jpg">
-    <img src="images/21.jpg">
-    <img src="images/22.jpg">
-    <img src="images/23.jpg">
-    <img src="images/24.jpg">
-    <img src="images/25.jpg">
-    <img src="images/26.jpg">
-    <img src="images/27.jpg">
-    <img src="images/28.jpg">
-    <img src="images/29.jpg">
-    <img src="images/30.jpg">
-    <img src="images/31.jpg">
+    <img src="../client/images/apple/1.jpg">
+    <img src="../client/images/apple/2.jpg">
+    <img src="../client/images/apple/3.jpg">
+    <img src="../client/images/apple/4.jpg">
+    <img src="../client/images/apple/5.jpg">
+    <img src="../client/images/apple/6.jpg">
+    <img src="../client/images/apple/7.jpg">
+    <img src="../client/images/apple/8.jpg">
+    <img src="../client/images/apple/9.jpg">
+    <img src="../client/images/apple/10.jpg">
+    <img src="../client/images/apple/11.jpg">
+    <img src="../client/images/apple/12.jpg">
+    <img src="../client/images/apple/13.jpg">
+    <img src="../client/images/apple/14.jpg">
+    <img src="../client/images/apple/15.jpg">
+    <img src="../client/images/apple/16.jpg">
+    <img src="../client/images/apple/17.jpg">
+    <img src="../client/images/apple/18.jpg">
+    <img src="../client/images/apple/19.jpg">
+    <img src="../client/images/apple/20.jpg">
+    <img src="../client/images/apple/21.jpg">
+    <img src="../client/images/apple/22.jpg">
+    <img src="../client/images/apple/23.jpg">
+    <img src="../client/images/apple/24.jpg">
+    <img src="../client/images/apple/25.jpg">
+    <img src="../client/images/apple/26.jpg">
+    <img src="../client/images/apple/27.jpg">
+    <img src="../client/images/apple/28.jpg">
+    <img src="../client/images/apple/29.jpg">
+    <img src="../client/images/apple/30.jpg">
+    <img src="../client/images/apple/31.jpg">
 </div>
 </body>
 </html>
