added links to up-to section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="top-display">
         <div>
             <h1>Hey. I'm Kash Goudarzi.</h1>
-            <h2>I'm a front-end web developer.</h2>
+            <h2>I'm a full-stack web developer.</h2>
         </div>
     </div>
     <main>
@@ -318,7 +318,7 @@
                                 <span class="header-num">3</span> Current Book
                             </h3>
                         </div>
-                        <a class="book">
+                        <a class="book" target="_blank" href="https://www.amazon.com/When-Breath-Becomes-Paul-Kalanithi/dp/081298840X/ref=sr_1_1?ie=UTF8&qid=1496987238&sr=8-1&keywords=when+breath+becomes+air">
                             <img src="https://goo.gl/bhsU4K" alt="When Breath Becomes Air">
                             <h2>When Breath Becomes Air</h2>
                             <h3>Paul Kalanithi</h3>
@@ -331,12 +331,11 @@
                                 <span class="header-num">3</span> Newest Blog Post
                             </h3>
                         </div>
-                        <a class="blog">
+                        <a class="blog" target="_blank" href="https://medium.com/@kashgoudarzi/4-things-i-learned-from-launching-my-first-site-ae4643b00352">
                             <img src="https://goo.gl/IINO9Q" alt="Blog Post">
                             <h2>4 Things I Learned From Launching My First Site</h2>
                         </a>
                     </div>
-
                 </div>
                 <div class="upto-row">
                     <div class="upto-app">
@@ -346,9 +345,9 @@
                                 <span class="header-num">3</span> New Favorite App
                             </h3>
                         </div>
-                        <a class="app">
+                        <a class="app" target="_blank" href="http://www.bear-writer.com/">
                             <img src="https://pbs.twimg.com/profile_images/748254412259328000/WqDZWu-w.jpg" alt="Cool App">
-                            <p>This is a really cool app</p>
+                            <p>This is bear. It's a note-taking app.</p>
                         </a>
                     </div>
                     <div class="upto-charity">
@@ -358,7 +357,7 @@
                                 <span class="header-num">3</span> Organization I Like
                             </h3>
                         </div>
-                        <a class="org">
+                        <a class="org" target="_blank" href="https://action.aclu.org/donate-aclu?ms=web_horiz_nav_hp">
                             <img src="https://goo.gl/Xkta8F" alt="Organization">
                             <p>Donate to them. Keep the people powerful.</p>
                         </a>
