added more photos

--- a/apple/index.html
+++ b/apple/index.html
@@ -26,10 +26,11 @@
 <div class="apple">
     <div class="thank">
         <h1>Thank you</h1>
-        <p>Thank you for filling my life with joy, knowledge, and love. I couldn't have
+        <p>Thank you, everyone, for filling my life with joy, knowledge, and love. I couldn't have
             asked for a better team to spend the last 1.5 years of my life with.</p>
-        <p>A special thanks to Jennifer and Amy for sticking with me through thick and
-            thin and listening to me while I talk about how cool coding is.</p>
+        <p>Special thanks to Jennifer and Amy for sticking with me through thick and
+            thin. Your unconditional love will stick with me forever.</p>
+        <p>Here are some photos of us. Enjoy <img style="width: 15px; position: relative; top: 1px;" src="/client/images/apple/like.png" alt=""></p>
         <h3>Thank you, Raid, for sending me some of these photos</h3>
     </div>
     <img src="../client/images/apple/1.jpg">
@@ -63,6 +64,19 @@
     <img src="../client/images/apple/29.jpg">
     <img src="../client/images/apple/30.jpg">
     <img src="../client/images/apple/31.jpg">
+    <img src="../client/images/apple/32.jpg">
+    <img src="../client/images/apple/33.jpg">
+    <img src="../client/images/apple/34.jpg">
+    <img src="../client/images/apple/35.jpg">
+    <img src="../client/images/apple/36.jpg">
+    <img src="../client/images/apple/37.jpg">
+    <img src="../client/images/apple/38.jpg">
+    <img src="../client/images/apple/39.jpg">
+    <img src="../client/images/apple/40.jpg">
+
+    <h3>Made with
+        <img style="width: 15px; position: relative; top: 1px;" src="/client/images/apple/like.png" alt="">
+        and HTML</h3>
 </div>
 </body>
 </html>
