readded all photos

--- a/apple/index.html
+++ b/apple/index.html
@@ -73,6 +73,7 @@
     <img src="../client/images/apple/38.jpg">
     <img src="../client/images/apple/39.jpg">
     <img src="../client/images/apple/40.jpg">
+    <img src="../client/images/apple/41.jpg">
 
     <h3>Made with
         <img style="width: 15px; position: relative; top: 1px;" src="/client/images/apple/like.png" alt="">
