--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		<hr>
 		<p>Skills: <i style="opacity: 0.4">(can you find the Pokemon?)</i></p>
 		<p>javascript, node, redux, react, python, git, gulp, rest, graphql, sql, postgres, mysql,
-			tenserlolno, grunt, webpack, d3, es6, mocha, chai, enzyme, jest, redis, regex, mongodb,
+			grunt, webpack, d3, es6, mocha, chai, enzyme, jest, redis, regex, mongodb,
 			jade, aws s3, sass, less, css, html, charizard, jquery, php, java, express, socket.io,
 			seo, flow, markdown, typescript, objective c, swift, npm, yarn, bootstrap</p>
 		<hr>
