added resume section

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 <body>
 <div id="app">
 	<div class="center">
-		<p>Hey. I'm Kash Goudarzi.</p>
+		<p>Hey! I'm Kash Goudarzi.</p>
 		<br>
-		<p>I'm a software engineer based in Seattle.</p>
+		<p>I'm a software engineer based in Seattle 🌆</p>
 		<hr>
 		<p>A little more about me:</p>
 		<ul>
@@ -40,7 +40,7 @@
 			<li>Age: 20</li>
 			<li>Height: 6 2</li>
 			<li>Politics: <i style="opacity: 0.7">float: left;</i></li>
-			<li>Favorite color: <span class="fav-color"></span></li>
+			<li>Favorite color: <span title="#736EFE" class="fav-color"></span></li>
 		</ul>
 		<hr>
 		<p>By me:</p>
@@ -81,27 +81,16 @@
 			<li><a href="https://www.battleforthenet.com/">Battle For The Net</a></li>
 		</ul>
 		<hr>
-		<p>A note:</p>
-		<p>It's crazy that we might not have an open and free internet one day. Net neutrality is so
-			important. Please: go tell the FCC that you
-			<a href="https://battleforthenet.com">care</a>. Also, donate to
-			<a href="https://action.aclu.org/donate-aclu?ms=web_horiz_nav_hp">ACLU</a> - keep the
-			people powerful.</p>
+		<p>Resume</p>
+		<p>Please feel free to <a href="mailto:me@kash.cm">email me</a> if you'd like to see my resume 😊</p>
 		<hr>
-		<p>Work for Wesaturate</p>
-		<p>If you'd like to work for Wesaturate, please email <a href="mailto:jobs@wesaturate.com">jobs@wesaturate.com</a>.
-			Let's make some cool things.</p>
-		<hr>
-		<p>Let's talk</p>
+		<p>Get in touch</p>
 		<ul>
-			<li><a href="mailto:me@kash.cm">me@kash.cm</a></li>
-			<li><a target="_blank" href="https://github.com/kash">github@kash</a></li>
-			<li><a target="_blank" href="https://www.wesaturate.com/kash">wesaturate@kash</a></li>
-			<li><a target="_blank" href="https://linkedin.com/in/kashg">linkedin@kashg</a></li>
-			<li>
-				<a target="_blank" href="https://instagram.com/kashgoudarzi">instagram@kashgoudarzi</a>
-			</li>
-			<li><a target="_blank" href="https://unsplash.com/kash">unsplash@kash</a></li>
+			<li>Email: <a href="mailto:me@kash.cm">me@kash.cm</a></li>
+			<li>GitHub: <a target="_blank" href="https://github.com/kash">@kash</a></li>
+			<li>Wesaturate: <a target="_blank" href="https://www.wesaturate.com/kash">@kash</a></li>
+			<li>LinkedIn: <a target="_blank" href="https://linkedin.com/in/kashg">@kashg</a></li>
+			<li>Instagram: <a target="_blank" href="https://instagram.com/kashgoudarzi">@kashgoudarzi</a></li>
 		</ul>
 	</div>
 </div>
