--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 	<link rel="stylesheet" href="client/styles/reset.css" type="text/css">
 	<link rel="stylesheet" href="client/styles/index.scss" type="text/css">
 	
-	<meta http-equiv="content-type" content="text/html;charset=utf-8"/>
-	<meta charset="UTF-8"/>
-	<meta name="description" content="Developer."/>
-	<meta name="twitter:card" content="summary_large_image"/>
-	<meta name="twitter:site" content="@kashgoudarzi"/>
-	<meta name="twitter:title" content="Kash Goudarzi"/>
-	<meta name="twitter:description" content="Developer."/>
-	<meta name="twitter:creator" content="@kashgoudarzi"/>
+	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
+	<meta charset="UTF-8" />
+	<meta name="description" content="Developer." />
+	<meta name="twitter:card" content="summary_large_image" />
+	<meta name="twitter:site" content="@kashgoudarzi" />
+	<meta name="twitter:title" content="Kash Goudarzi" />
+	<meta name="twitter:description" content="Developer." />
+	<meta name="twitter:creator" content="@kashgoudarzi" />
 	<meta property="og:title" content="Kash Goudarzi">
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="http://kash.cm/">
@@ -32,17 +32,6 @@
 		<br>
 		<p>I'm a software engineer based in Seattle 🌆</p>
 		<hr>
-		<p>A little more about me:</p>
-		<ul>
-			<li>I am a React/Node developer</li>
-			<li>School: <a href="https://uw.edu">UW</a></li>
-			<li>Major: CS</li>
-			<li>Age: 20</li>
-			<li>Height: 6 2</li>
-			<li>Politics: <i style="opacity: 0.7">float: left;</i></li>
-			<li>Favorite color: <span title="#736EFE" class="fav-color"></span></li>
-		</ul>
-		<hr>
 		<p>By me:</p>
 		<ul>
 			<li><a target="_blank" href="https://www.wesaturate.com">Wesaturate</a> - Free photos
@@ -52,45 +41,59 @@
 			<li><a target="_blank" href="http://defend.grayhats.io">Defend</a> - Site for an
 				upcoming hackathon
 			</li>
-			<li><a target="_blank" href="http://puretasks.com">Puretasks</a> - Task management</li>
 			<li><a target="_blank" href="http://blueout.co">Blueout</a> - iOS apps</li>
 			<li><a target="_blank" href="https://github.com/kash/resources">Resources</a> - Curated
 				resources for devs
 			</li>
 			<li><a target="_blank" href="https://github.com/kash">GitHub</a> - More on my GitHub
-				@kash
 			</li>
 		</ul>
 		<hr>
 		<p>Skills: <i style="opacity: 0.4">(can you find the Pokemon?)</i></p>
-		<p>javascript, node, redux, react, git, rest, sql, postgres, mysql, webpack, es6,
-			stylus, mocha, chai, redis, regex, jade, aws s3, sass, less, css, html,
-			charizard, jquery, php, java, express, seo, flow, markdown, typescript, bootstrap</p>
+		<p>JavaScript, Node, Redux, React, Git, REST, SQL, MySQL, Webpack, ES6,
+			Stylus, Mocha, Redis, Regex, Jade, AWS S3, Sass, LESS, CSS, HTML,
+			Charizard, jQUery, Express, SEO, Flow, TypeScript, Bootstrap</p>
 		<hr>
-		<p>Please support the following things:</p>
+		<p>Please support the following causes:</p>
 		<ul>
-			<li><a target="_blank" href="https://giveto.seattlechildrens.org/changealife">Seattle
-				Children's Hospital</a></li>
-			<li><a target="_blank" href="https://action.aclu.org/donate-aclu?ms=web_horiz_nav_hp">ACLU</a>
-			</li>
-			<li><a target="_blank" href="https://ifundraise.nami.org/index.cfm?fuseaction=donate.event&eventID=503&referrer=WEBDG&utm_source=HomepageButton&utm_medium=website&utm_campaign=DonationTracking">NAMI</a></li>
 			<li>
-				<a target="_blank" href="https://secure.feedingamerica.org/site/Donation2?df_id=15040&15040.donation=form1&s_onsite_promo=MainNav_Donate&s_src=W177ORGSC&s_onsite_promo=MainNav_Donate&s_referrer=google&s_subsrc=http%3A%2F%2Fwww.feedingamerica.org%2F%3Freferrer%3Dhttps%3A%2F%2Fwww.google.com%2F">Feeding
-					America</a>
+				<a target="_blank" href="https://giveto.seattlechildrens.org/changealife">
+					Seattle Children's Hospital
+				</a>
 			</li>
-			<li><a href="https://www.battleforthenet.com/">Battle For The Net</a></li>
+			<li>
+				<a target="_blank" href="https://action.aclu.org/donate-aclu?ms=web_horiz_nav_hp">
+					ACLU
+				</a>
+			</li>
+			<li>
+				<a target="_blank" href="https://ifundraise.nami.org/index.cfm?fuseaction=donate.event&eventID=503&referrer=WEBDG&utm_source=HomepageButton&utm_medium=website&utm_campaign=DonationTracking">
+					NAMI
+				</a>
+			</li>
+			<li>
+				<a target="_blank" href="https://secure.feedingamerica.org/site/Donation2?df_id=15040&15040.donation=form1&s_onsite_promo=MainNav_Donate&s_src=W177ORGSC&s_onsite_promo=MainNav_Donate&s_referrer=google&s_subsrc=http%3A%2F%2Fwww.feedingamerica.org%2F%3Freferrer%3Dhttps%3A%2F%2Fwww.google.com%2F">
+					Feeding America
+				</a>
+			</li>
+			<li>
+				<a target="_blank" href="https://www.battleforthenet.com/">
+					Battle For The Net
+				</a>
+			</li>
 		</ul>
 		<hr>
-		<p>Resume</p>
+		<p>Resume:</p>
 		<p>Please feel free to <a href="mailto:me@kash.cm">email me</a> if you'd like to see my resume 😊</p>
 		<hr>
-		<p>Get in touch</p>
+		<p>Get in touch:</p>
 		<ul>
-			<li>Email: <a href="mailto:me@kash.cm">me@kash.cm</a></li>
+			<li>Email: <a href="mailto:kash@wesaturate.com">kash@wesaturate.com</a></li>
 			<li>GitHub: <a target="_blank" href="https://github.com/kash">@kash</a></li>
 			<li>Wesaturate: <a target="_blank" href="https://www.wesaturate.com/kash">@kash</a></li>
 			<li>LinkedIn: <a target="_blank" href="https://linkedin.com/in/kashg">@kashg</a></li>
-			<li>Instagram: <a target="_blank" href="https://instagram.com/kashgoudarzi">@kashgoudarzi</a></li>
+			<li>Instagram: <a target="_blank" href="https://instagram.com/kashgoudarzi">@kashgoudarzi</a>
+			</li>
 		</ul>
 	</div>
 </div>
