--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 		</ul>
 		<hr>
 		<p>Resume:</p>
-		<p>Please feel free to <a href="mailto:me@kash.cm">email me</a> if you'd like to see my resume 😊</p>
+		<p>Please feel free to <a href="mailto:kash@wesaturate.com">email me</a> if you'd like to see my resume 😊</p>
 		<hr>
 		<p>Get in touch:</p>
 		<ul>
