--- a/apple/index.html
+++ b/apple/index.html
@@ -30,9 +30,14 @@
             asked for a better team to spend the last 1.5 years of my life with.</p>
         <p>Special thanks to Jennifer and Amy for sticking with me through thick and
             thin. Your unconditional love will stick with me forever.</p>
-        <p>Here are some photos of us. Enjoy <img style="width: 15px; position: relative; top: 1px;" src="/client/images/apple/like.svg" alt=""></p>
+        <p>Here are some photos of us. Enjoy <img style="width: 15px; position: relative; top: 1px;" src="../client/images/apple/like.svg" alt=""></p>
         <h3>Thank you, Raid, for sending me some of these photos</h3>
     </div>
+    <img src="../client/images/apple/99.jpg">
+    <img src="../client/images/apple/98.jpg">
+    <img src="../client/images/apple/97.jpg">
+    <img src="../client/images/apple/96.jpg">
+    <img src="../client/images/apple/95.jpg">
     <img src="../client/images/apple/1.jpg">
     <img src="../client/images/apple/2.jpg">
     <img src="../client/images/apple/3.jpg">
