--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 
 <html>
+
 <head>
-	<link rel="stylesheet" href="client/styles/reset.css" type="text/css">
-	<link rel="stylesheet" href="client/styles/index.scss" type="text/css">
 	
 	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 	<meta charset="UTF-8" />
@@ -15,91 +14,40 @@
 	<meta name="twitter:creator" content="@kashgoudarzi" />
 	<meta property="og:title" content="Kash Goudarzi">
 	<meta property="og:type" content="website">
-	<meta property="og:url" content="http://kash.cm/">
+	<meta property="og:url" content="http://kashgoudarzi.com/">
 	<meta property="og:description" content="Developer.">
 	<meta property="og:site_name" content="Kash Goudarzi">
-	<meta itemprop="url" content="http://kash.cm/">
+	<meta itemprop="url" content="http://kashgoudarzi.com/">
 	<meta itemprop="name" content="Kash Goudarzi">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	<link rel="stylesheet" href="/client/styles/index.css">
+	<link rel="stylesheet" href="./styles/reset.css" type="text/css">
+	<link rel="stylesheet" href="./styles/index.css" type="text/css">
 	<title>Kash Goudarzi</title>
 </head>
 
 <body>
 <div id="app">
 	<div class="center">
-		<p>Hey! I'm Kash Goudarzi.</p>
-		<br>
-		<p>I'm a software engineer based in Seattle 🌆</p>
-		<hr>
-		<p>By me:</p>
-		<ul>
-			<li><a target="_blank" href="https://www.wesaturate.com">Wesaturate</a> - Free photos
-			</li>
-			<li><a target="_blank" href="http://grayhats.io">Gray Hats</a> - Home page for UW club
-			</li>
-			<li><a target="_blank" href="http://defend.grayhats.io">Defend</a> - Site for an
-				upcoming hackathon
-			</li>
-			<li><a target="_blank" href="http://blueout.co">Blueout</a> - iOS apps</li>
-			<li><a target="_blank" href="https://github.com/kash/resources">Resources</a> - Curated
-				resources for devs
-			</li>
-			<li><a target="_blank" href="https://github.com/kash">GitHub</a> - More on my GitHub
-			</li>
-		</ul>
-		<hr>
-		<p>Skills: <i style="opacity: 0.4">(can you find the Pokemon?)</i></p>
-		<p>JavaScript, Node, Redux, React, Git, REST, SQL, MySQL, Webpack, ES6,
-			Stylus, Mocha, Redis, Regex, Jade, AWS S3, Sass, LESS, CSS, HTML,
-			Charizard, jQUery, Express, SEO, Flow, TypeScript, Bootstrap</p>
-		<hr>
-		<p>Please support the following causes:</p>
-		<ul>
-			<li>
-				<a target="_blank" href="https://giveto.seattlechildrens.org/changealife">
-					Seattle Children's Hospital
-				</a>
-			</li>
-			<li>
-				<a target="_blank" href="https://action.aclu.org/donate-aclu?ms=web_horiz_nav_hp">
-					ACLU
-				</a>
-			</li>
-			<li>
-				<a target="_blank" href="https://ifundraise.nami.org/index.cfm?fuseaction=donate.event&eventID=503&referrer=WEBDG&utm_source=HomepageButton&utm_medium=website&utm_campaign=DonationTracking">
-					NAMI
-				</a>
-			</li>
-			<li>
-				<a target="_blank" href="https://secure.feedingamerica.org/site/Donation2?df_id=15040&15040.donation=form1&s_onsite_promo=MainNav_Donate&s_src=W177ORGSC&s_onsite_promo=MainNav_Donate&s_referrer=google&s_subsrc=http%3A%2F%2Fwww.feedingamerica.org%2F%3Freferrer%3Dhttps%3A%2F%2Fwww.google.com%2F">
-					Feeding America
-				</a>
-			</li>
-			<li>
-				<a target="_blank" href="https://www.battleforthenet.com/">
-					Battle For The Net
-				</a>
-			</li>
-		</ul>
-		<hr>
-		<p>Resume:</p>
-		<p>Please feel free to <a href="mailto:kash@wesaturate.com">email me</a> if you'd like to see my resume 😊</p>
-		<hr>
-		<p>Get in touch:</p>
-		<ul>
-			<li>Email: <a href="mailto:kash@wesaturate.com">kash@wesaturate.com</a></li>
-			<li>GitHub: <a target="_blank" href="https://github.com/kash">@kash</a></li>
-			<li>Wesaturate: <a target="_blank" href="https://www.wesaturate.com/kash">@kash</a></li>
-			<li>LinkedIn: <a target="_blank" href="https://linkedin.com/in/kashg">@kashg</a></li>
-			<li>Instagram: <a target="_blank" href="https://instagram.com/kashgoudarzi">@kashgoudarzi</a>
-			</li>
-		</ul>
+		<div>
+			<p>I'm Kash Goudarzi.</p>
+		</div>
+		<div>
+			<h2>Work</h2>
+			<p>I currently work at ServiceNow as a Software Engineer.</p>
+			<p>I also work on <a target="_blank" href="https://wesaturate.com">Wesaturate</a>, a business management
+				software.</p>
+		</div>
+		<div>
+			<h2>Photography</h2>
+			<p>Unsplash: <a target="_blank" href="https://unsplash.com/kash">@kash</a></p>
+			<p>Instagram: <a target="_blank" href="https://instagram.com/instagram">@kashgoudarzi</a></p>
+		</div>
+		<div>
+			<h2>Contact</h2>
+			<p>Email: <a href="mailto:kash@wesaturate.com">kash@wesaturate.com</a></p>
+			<p>GitHub: <a target="_blank" href="https://github.com/kash">@kash</a></p>
+		</div>
 	</div>
 </div>
 </body>
-<script type="text/javascript" src="/client/scripts/index.js"></script>
-
 </html>
-
-
