--- a/index.html
+++ b/index.html
@@ -33,18 +33,16 @@
 		</div>
 		<div>
 			<h2>Work</h2>
-			<p>I currently work at ServiceNow as a Software Engineer.</p>
-			<p>I also work on <a target="_blank" href="https://wesaturate.com">Wesaturate</a>, a business management
-				software.</p>
+			<p><a target="_blank" href="https://wesat.io">Wesat</a>: Client management software</p>
 		</div>
 		<div>
 			<h2>Photography</h2>
 			<p>Unsplash: <a target="_blank" href="https://unsplash.com/kash">@kash</a></p>
-			<p>Instagram: <a target="_blank" href="https://instagram.com/instagram">@kashgoudarzi</a></p>
+			<p>Instagram: <a target="_blank" href="https://instagram.com/kashgoudarzi">@kashgoudarzi</a></p>
 		</div>
 		<div>
 			<h2>Contact</h2>
-			<p>Email: <a href="mailto:kash@wesaturate.com">kash@wesaturate.com</a></p>
+			<p>Email: kash at wesat dot io</p>
 			<p>GitHub: <a target="_blank" href="https://github.com/kash">@kash</a></p>
 		</div>
 	</div>
